force-app/main/default/objects/B25__Resource_Grouping__c/B25__Resource_Grouping__c.object-meta.xml
<CustomObject>
    <label>Resource Grouping</label>
    <nameField>
        <displayFormat>RG-{0}</displayFormat>
        <label>Resource Grouping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Groupings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>