force-app/main/default/objects/B25__Resource_Grouping__c/fields/B25__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B25__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When not active, this resource grouping has no effect.</description>
    <inlineHelpText>Lorsqu’il n’est pas actif, ce regroupement de ressources n’a aucun effet.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>