force-app/main/default/objects/B25__Resource_Grouping__c/fields/B25__Resource_Two__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource_Two__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This resource blocks the other resource and vice versa.</description>
    <inlineHelpText>Cette ressource bloque l’autre ressource et vice versa.</inlineHelpText>
    <label>Resource Two</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Resource Groupings (Resource Two)</relationshipLabel>
    <relationshipName>Resource_Groupings_Two</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>